--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -1,4 +1,9 @@
 <h1>Heroes <small>The biggest database</small></h1>
+
+<div *ngIf="qSearch !== null && qSearch.trim() !== '' && heroes.length === 0" class="alert alert-warning" role="alert">
+    Your search for '{{qSearch}}' returned no results
+</div>
+
 <div class="card-columns">
     <div class="card animated fadeIn fast border border-primary" *ngFor="let hero of heroes; let i = index">
         <img [src]="hero.img" class="card-img-top img-fluid" [alt]="hero.nombre">
