--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -1,22 +1,22 @@
-<h1 class="animated fadeIn">{{ hero.nombre | uppercase }} <small>{{ hero.aparicion | date:'(y)' }}</small></h1>
+<h1 class="animated fadeIn">{{ hero.name | uppercase }} <small>{{ hero.firstAppearance | date:'(y)' }}</small></h1>
 <hr>
 
 <div class="row animated fadeIn fast">
     <div class="col-md-4">
-        <img [src]="hero.img" class="img-fluid" [alt]="hero.nombre">
+        <img [src]="hero.img" class="img-fluid" [alt]="hero.name">
         <br><br>
-        <a routerLink="/heroes" class="btn btn-outline-danger btn-block">Back</a>
+        <a (click)="goBack();" class="btn btn-outline-danger btn-block">Back</a>
     </div>
 
     <div class="col-md-8">
-        <h3>{{ hero.nombre }}</h3>
+        <h3>{{ hero.name }}</h3>
         <hr>
         <p class="text-justify">
             {{ hero.bio }}
         </p>
         <div class="text-center">
-            <img *ngIf="hero.casa==='Marvel'" class="img-logo" src="assets/img/logo-marvel.png" [alt]="hero.casa">
-            <img *ngIf="hero.casa==='DC'" class="img-logo" src="assets/img/logo-dc.png" [alt]="hero.casa">
+            <img *ngIf="hero.publisher==='Marvel'" class="img-logo" src="assets/img/logo-marvel.png" [alt]="hero.publisher">
+            <img *ngIf="hero.publisher==='DC'" class="img-logo" src="assets/img/logo-dc.png" [alt]="hero.publisher">
         </div>
     </div>
 
