--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -5,14 +5,6 @@
 </div>
 
 <div class="card-columns">
-    <div class="card animated fadeIn fast border border-primary" *ngFor="let hero of heroes; let i = index">
-        <img [src]="hero.img" class="card-img-top img-fluid" [alt]="hero.nombre">
-        <div class="card-body">
-            <h5 class="card-title">{{ hero.nombre }}</h5>
-            <p class="card-text">{{ hero.bio }}</p>
-            <p class="card-text"><small class="text-muted">{{ hero.aparicion }}</small></p>
-            <button (click)="heroDetail(i);" class="btn btn-outline-primary btn-block">Details</button>
-            <a routerLink="/hero/{{ i }}" class="btn btn-outline-primary btn-block">Details</a>
-        </div>
-    </div>
+    <app-hero-card *ngFor="let hero of heroes; let i = index" [hero]=hero (selectedHero)="heroDetail( $event )">
+    </app-hero-card>
 </div>
